apps/arr-stack/sabnzbd/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: sabnzbd
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    app: sabnzbd
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
